пр3 высота ифта заменена на относительные величины, проработал скролл

--- a/index.html
+++ b/index.html
@@ -42,19 +42,20 @@
       </ul>
     </section>
     <section class="photo-grid">
-      <img src="./images/__item.jpg" alt="в поезде">
-      <img src="./images/__item2.jpg" alt="облака">
-      <img src="./images/__item3.jpg" alt="волк в тумане">
-      <img src="./images/__item4.jpg" alt="Сочи">
-      <img src="./images/__item5.jpg" alt="под крылом самолета">
-      <img src="./images/__item6.jpg" alt="Байкал">
-      <img src="./images/__item7.jpg" alt="Эльбрус">
-      <img src="./images/__item8.jpg" alt="пешеходный переход">
-      <img src="./images/__item9.jpg" alt="Камчатка">
-      <img src="./images/__item10.jpg" alt="сопка на Камчатке">
-      <img src="./images/__item11.jpg" alt="берег Байкала">
-      <img src="./images/__item12.jpg" alt="Ергаки">
+      <img class="photo-grid__photo-item" src="./images/__item.jpg" alt="в поезде">
+      <img class="photo-grid__photo-item" src="./images/__item2.jpg" alt="облака">
+      <img class="photo-grid__photo-item" src="./images/__item3.jpg" alt="волк в тумане">
+      <img class="photo-grid__photo-item" src="./images/__item4.jpg" alt="Сочи">
+      <img class="photo-grid__photo-item" src="./images/__item5.jpg" alt="под крылом самолета">
+      <img class="photo-grid__photo-item" src="./images/__item6.jpg" alt="Байкал">
+      <img class="photo-grid__photo-item" src="./images/__item7.jpg" alt="Эльбрус">
+      <img class="photo-grid__photo-item" src="./images/__item8.jpg" alt="пешеходный переход">
+      <img class="photo-grid__photo-item" src="./images/__item9.jpg" alt="Камчатка">
+      <img class="photo-grid__photo-item" src="./images/__item10.jpg" alt="сопка на Камчатке">
+      <img class="photo-grid__photo-item" src="./images/__item11.jpg" alt="берег Байкала">
+      <img class="photo-grid__photo-item" src="./images/__item12.jpg" alt="Ергаки">
     </section>
+
     <section class="" aria-label="Блок с информацией о достопримечательностях России">
       <ul class="cards">
         <li class="cards__item">
