скоректировано поведение сайта на 1280 и 1024

--- a/index.html
+++ b/index.html
@@ -9,39 +9,45 @@
 <body class="page">
   <header class="header">
     <img class="logo" src="./images/__logo.svg" alt="логотип">
-    <a class="header header__lang-link" href="#">Ru</a>
-    <a class="header header__lang-link header__lang-link_disabled" href="#">En</a>
+    <ul class="header__list-language">
+      <li>
+        <a class="header__lang-link header__lang-link_enabled" href="#">Ru</a>
+      </li>
+      <li>
+        <a class="header__lang-link" href="#">En</a>
+      </li>
+    </ul>
   </header>
   <main class="content">
     <section class="launch">
-      <h1 class="launch__title">Путешествия по России</h1>
-      <p class="launch__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+      <h1 class="launch__title">Путешествия по&nbsp;России</h1>
+      <p class="launch__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
       <figure class="launch__image-container">
         <img class="launch__image-background" src="./images/__image-optim.jpg" alt="сон в поезде">
-        <figcaption class="launch__signature">ваша полка—верхняя</figcaption>
+        <figcaption class="launch__signature">ваша&nbsp;полка&nbsp;&mdash;&nbsp;верхняя</figcaption>
       </figure>
     </section>
     <section class="motivation">
       <h2 class="motivation__title">Чего мы там не видели?</h2>
-      <article class="motivation__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
-        но только 36% планируют провести отпуск в родной стране.
-        Мол, чего мы тут, дома, не видели?
-        На самом деле, Россия — это целая вселенная с ласковым морем юга,
-         густыми лесами Саян и суровыми льдами плато Путорана.
-         А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
-         Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
-         усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране.
-          Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
-      </article>
+      <p class="motivation__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+        но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране.
+        Мол, чего мы&nbsp;тут, дома, не&nbsp;видели?
+        На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга,
+        густыми лесами Саян и&nbsp;суровыми льдами плато Путорана.
+        А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов.
+        Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей,
+        усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране.
+        Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.
+      </p>
       <ul class="motivation__list">
-        <li>Часовых поясов 11</li>
-        <li>Объектов природного наследия ЮНЕСКО 12</li>
-        <li>Объектов культурного наследия ЮНЕСКО 16</li>
-        <li>Природных заповедников 105</li>
-        <li>Аэропортов 241</li>
+        <li>Часовых поясов <span class="motivation__number">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="motivation__number">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="motivation__number">16</span></li>
+        <li>Природных заповедников <span class="motivation__number">105</span></li>
+        <li>Аэропортов <span class="motivation__number">241</span></li>
       </ul>
     </section>
-    <section class="photo-grid">
+    <section class="photo-grid" aria-label="Фото интересных мест">
       <img class="photo-grid__photo-item" src="./images/__item.jpg" alt="в поезде">
       <img class="photo-grid__photo-item" src="./images/__item2.jpg" alt="облака">
       <img class="photo-grid__photo-item" src="./images/__item3.jpg" alt="волк в тумане">
@@ -55,49 +61,52 @@
       <img class="photo-grid__photo-item" src="./images/__item11.jpg" alt="берег Байкала">
       <img class="photo-grid__photo-item" src="./images/__item12.jpg" alt="Ергаки">
     </section>
-
-    <section class="" aria-label="Блок с информацией о достопримечательностях России">
-      <ul class="cards">
-        <li class="cards__item">
-          <h2 class="cards__title">Куршская коса</h2>
-          <div class="cards__link">
-            <p class="cards__link-heading" >URL</p>
-            <a class="cards__link-url" href="http://park-kosa.ru">park-kosa.ru</a>
-          </div>
-          <img class="cards__image" src="./images/kurshskaya_kosa.jpg" alt="Куршская коса">
-          <div class="cards__paragraph">
-            <p class="cards__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
-              Уникальная природная зона на краю российского анклава.
-            </p>
-            <p class="cards__paragraph">
-              На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству —
-              самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
-              Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
-            </p>
-          </div>
-        </li>
-        <li class="cards__item">
-          <h2 class="cards__title">Кольский</h2>
+    <section class="cards" aria-label="Блок с информацией о достопримечательностях России">
+      <article class="cards__item">
+        <h2 class="cards__title">Куршская коса</h2>
+        <div class="cards__link">
+          <p class="cards__link-heading" >url</p>
+          <a class="cards__link-url" href="http://park-kosa.ru">park-kosa.ru</a>
+        </div>
+        <img class="cards__image" src="./images/kurshskaya_kosa.jpg" alt="Куршская коса">
+        <div class="cards__text">
+          <p class="cards__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
+            Уникальная природная зона на краю российского анклава.
+          </p>
+          <p class="cards__paragraph">
+            На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству —
+            самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
+            Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+          </p>
+        </div>
+      </article>
+      <article class="cards__item">
+        <h2 class="cards__title">Кольский</h2>
           <div class="cards__link">
             <p class="cards__link-heading" >URL</p>
             <a class="cards__link-url" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
           <img class="cards__image" src="./images/kolsky.jpg" alt="Кольский полуостров">
-          <div class="cards__paragraph">
+          <div class="cards__text">
             <p class="cards__paragraph">
-              Почти весь полуостров находится за Полярным кругом.
-              Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан,
-              прикидывающийся Баренцевым морем.
+              Почти весь полуостров находится за&nbsp;Полярным кругом.
+              Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash;
+              тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.
             </p>
             <p class="cards__paragraph">
-              На этом Калининградская область не заканчивается.
-              Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+              Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;
+              Териберке. Возможно, слово &laquo;Хибины&raquo;
+              не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии.
+              Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной,
+               а&nbsp;от&nbsp;апатитов вас давно накрывает апатия.
+               Но&nbsp;
+               ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.
             </p>
           </div>
-        </li>
-        <li class="cards__item">
-          <h2 class="cards__title">Алтай</h2>
+      </article>
+      <article class="cards__item">
+        <h2 class="cards__title">Алтай</h2>
           <div class="cards__link">
             <p class="cards__link-heading" >URL</p>
               <a class="cards__link-url" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">
@@ -105,7 +114,7 @@
               </a>
           </div>
           <img class="cards__image" src="./images/altay.jpg" alt="Алтай">
-          <div class="cards__paragraph">
+          <div class="cards__text">
             <p class="cards__paragraph">
               Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра.
@@ -118,15 +127,15 @@
               И знаменитые манулы — тоже обитатели Алтайского края.
             </p>
           </div>
-        </li>
-        <li class="cards__item">
-          <h2 class="cards__title">Зимний Байкал</h2>
+      </article>
+      <article class="cards__item">
+        <h2 class="cards__title">Зимний Байкал</h2>
           <div class="cards__link">
             <p class="cards__link-heading">URL</p>
             <a class="cards__link-url" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img class="cards__image" src="./images/baykal.jpg" alt="Зимний Байкал">
-          <div class="cards__paragraph">
+          <div class="cards__text">
             <p class="cards__paragraph">
               Всем известен Байкал как крупнейшее озеро в мире.
               Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
@@ -138,15 +147,15 @@
               В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
           </div>
-        </li>
-        <li class="cards__item">
-          <h2 class="cards__title">Карелия</h2>
+      </article>
+      <article class="cards__item">
+        <h2 class="cards__title">Карелия</h2>
           <div class="cards__link">
             <p class="cards__link-heading">URL</p>
             <a class="cards__link-url" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <img class="cards__image" src="./images/voldozero.jpg" alt="Волдозеро в Карелии">
-          <div class="cards__paragraph">
+          <div class="cards__text">
             <p class="cards__paragraph">
               Сибирь заканчивается не на Урале, а в Карелии:
               образующая тайгу сибирская лиственница не растёт западнее Водлозера.
@@ -158,8 +167,7 @@
               в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
           </div>
-        </li>
-      </ul>
+      </article>
     </section>
     <section class="image-conclusion">
       <a class="image-conclusion__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
