--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </figure>
     </section>
     <section class="motivation">
-      <h2 class="motivation__title">Чего мы там не видели?</h2>
+      <h2 class="motivation__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
       <p class="motivation__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
         но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране.
         Мол, чего мы&nbsp;тут, дома, не&nbsp;видели?
@@ -70,14 +70,14 @@
         </div>
         <img class="cards__image" src="./images/kurshskaya_kosa.jpg" alt="Куршская коса">
         <div class="cards__text">
-          <p class="cards__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
-            Уникальная природная зона на краю российского анклава.
+          <p class="cards__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта &mdash;
+            спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой.
+            Уникальная природная зона на&nbsp;краю российского анклава.
           </p>
           <p class="cards__paragraph">
-            На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству —
-            самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
-            Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+            На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству &mdash;
+самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов.
+Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.
           </p>
         </div>
       </article>
@@ -172,8 +172,8 @@
     <section class="image-conclusion">
       <a class="image-conclusion__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h2 class="image-conclusion__title">До Байкала «на собаках»</h2>
-        <p class="image-conclusion__subtitle">По мотивам учебной темы о Транссибе —
-        путешествие от столицы до Байкала на электричках.
+        <p class="image-conclusion__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе &mdash;
+          путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
         </p>
       </a>
     </section>
