исправлены замечания, добавлены промежуточные точки на низких разрешениях, для удаления горизонтальных скроллов

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </section>
     <section class="image-conclusion">
       <a class="image-conclusion__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-        <h2 class="image-conclusion__title">До Байкала «на собаках»</h2>
+        <h2 class="image-conclusion__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
         <p class="image-conclusion__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе &mdash;
           путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
         </p>
