--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
            Уникальная природная зона на&nbsp;краю российского анклава.
          </p>
          <p class="cards__paragraph">
-           На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству &mdash;
-самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов.
-Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.
+          На&nbsp;этом Калининградская область не&nbsp;заканчивается.
+           Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству &mdash;
+          самая западная точка России, Балтийская коса,&nbsp;&mdash;
+           и&nbsp;немецкое наследие россыпи небольших приморских городов.
+          Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;
+          запах стального, прохладного моря.
          </p>
        </div>
      </article>
